# zanzibar

./: .env  .gitignore  Cargo.toml  README.md  deny.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: audit.yml  benchmark.yml  general.yml
lambda/: Cargo.toml
lambda/benches/: mix_node.rs
lambda/src/: lib.rs  mix_node.rs  rokio.rs  testing.rs
lambda/tests/: mix_node_integration.rs
mix-node/: Cargo.toml  build.rs
mix-node/benches/: elastic_mix_node.rs  mix_node.rs
mix-node/config/: base.yaml  crypto.json  local.yaml  participants.json  production.yaml
mix-node/examples/demo/: main.rs
mix-node/migrations/: 20240802124714_init.sql
mix-node/proto/: echo.proto  mix-node.proto
mix-node/src/: auth.rs  config.rs  crypto.rs  db.rs  grpc.rs  lib.rs  rokio.rs  test_helpers.rs  testing.rs
mix-node/src/grpc/: error.rs  middleware.rs  mod.rs  service.rs
mix-node/src/rest/: error.rs  middleware.rs  mod.rs  routes.rs
mix-node/src/routes/: mod.rs
mix-node/tests/: elastic_web_integration.rs  encoding_tests.rs  grpc_integration.rs  mix_node_integration.rs  web_integration.rs
mix-node/tests/common/: mod.rs
remix/: Cargo.toml
remix/benches/: elastic_remix.rs  remix.rs
remix/src/: algorithm.rs  cipher.rs  elastic.rs  lib.rs  par.rs
thash/: Cargo.toml
thash/src/: lib.rs
worldcoin/: Cargo.toml
worldcoin/src/: main.rs
