[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.12"
tokio = { version = "1", features = ["macros"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
remix = { path = "../remix" }
bitvec = "1.0.1"
rand = { version = "0.8.5", features = ["min_const_gen"] }
rust-elgamal = "0.4.0"
reqwest = "0.12"

[[bin]]
name = "mix-node"
path = "src/bin/mix_node.rs"
