[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
remix = { path = "../remix" }
rust-elgamal = { version = "0.4", features = ["enable-serde"] }
rand = "0.8"
rayon = "1"
mimalloc = "0.1"

[dev-dependencies]
bitvec = "1.0"
rand = { version = "0.8", features = ["min_const_gen"] }
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }
serde_json = "1"

[[bench]]
name = "mix_node"
harness = false

[[bin]]
name = "mix-node"
path = "src/bin/mix_node.rs"
