[package]
name = "mix-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
lambda_http = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing"] }
axum = { version = "0.7", features = ["macros", "tracing"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["trace"] }
# gRPC
tonic = { version = "0.12" }
prost = "0.13"
tokio-stream = "0.1"
# Common
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
remix = { path = "../remix" }
rust-elgamal = { version = "0.4", features = ["enable-serde"] }
elastic-elgamal = { version = "0.3", features = ["serde"] }
rand = "0.8"
rayon = "1"
mimalloc = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
bincode = "1"
secrecy = { version = "0.8", features = ["serde"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
bitvec = "1"
rand = { version = "0.8", features = ["min_const_gen"] }
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }
serde_json = "1"

[[bench]]
name = "mix_node"
harness = false

[[bench]]
name = "elastic_mix_node"
harness = false

[[bin]]
name = "mix-node"
path = "src/bin/lambda.rs"
