[package]
name = "remix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1"
rust-elgamal = "0.4"
elastic-elgamal = { version = "0.3", features = ["serde"] }

[dev-dependencies]
rstest = "0.21"
criterion = "0.5"

[[bench]]
name = "remix"
harness = false

[[bench]]
name = "elastic_remix"
harness = false
