[package]
name = "remix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1"
elastic-elgamal = "0.3"

[dev-dependencies]
rstest = "0.21"
criterion = "0.5"

[[bench]]
name = "remix"
harness = false
